@@ -1,0 +1,2 @@
+CSS_NAME = Default
+CSS_FILE = simple.css
