@@ -4,7 +4,7 @@
 <head>
   <meta charset="${BLOG_CHARSET}" />
   <title>${BLOG_TITLE} - ${TITLE}</title>
-  <link type="text/css" rel="stylesheet" media="screen" href="${BASE_URL}/simple.css" title="Default" />
+  <link type="text/css" rel="stylesheet" media="screen" href="${BASE_URL}/${CSS_FILE}" title="${CSS_NAME}" />
   <link rel="alternate" type="application/rss+xml" title="${RSS_FEED_NAME}" href="${BASE_URL}/rss.xml" />
 </head>
   <body>
