@@ -8,6 +8,8 @@ Current (not released)
 - Add some missing variables in documentation
 - Complete documentation for installation via current version or developement
 version. More information for dependancies installation.
+- Templating improvements in order to create more templates and cascading
+stylesheets
 
 Version 0.1 (released 2012-07-17)
 - RSS feed
